# iot_sensor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.py  stm32_cortex-m33_toolchain.cmake
src/: CMakeLists.txt  application_main.c  blinkLED.c  sht3x.c
src/config/: FreeRTOSConfig.h
src/inc/: alltasks.h  application_main.h  blinkLED.h  sht3x.h
stm32/: .mxproject  CMakeLists.txt  STM32U545xx_FLASH.ld  STM32U545xx_RAM.ld  stm32.ioc
stm32/Core/Inc/: main.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h  stm32u5xx_nucleo_conf.h
stm32/Core/Src/: main.c  stm32u5xx_hal_msp.c  stm32u5xx_hal_timebase_tim.c  stm32u5xx_it.c
stm32/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
stm32/cmake/stm32cubemx/: CMakeLists.txt
